# py-state-machine

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
py_state_machine/: __init__.py  core.py
tests/: test_py_state_machine.py
